muncher/programs/test-cases/error-4.mnc
let a = object A {
    . $i:ident {}
    . $e:expr {}
};
